force-app/main/default/objects/IntegrationApiSettings__c/IntegrationApiSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This stores various setting relating to the population of integration usage records in Integration__c</description>
    <label>Integration Api Settings</label>
</CustomObject>