force-app/main/default/objects/IntegrationApiSettings__c/fields/InboundQueryApiAsyncSOQLHourRange__c.field-meta.xml
<CustomField>
    <fullName>InboundQueryApiAsyncSOQLHourRange__c</fullName>
    <description>The number of hours in the date range to use when running async soql queries. This is needed to ensure record count stays below 1 million since we can&apos;t use LIMIT in an async soql query.</description>
    <inlineHelpText>The number of hours in the date range to use when running async soql queries. This is needed to ensure record count stays below 1 million since we can&apos;t use LIMIT in an async soql query.</inlineHelpText>
    <label>Inbound Query Api Async SOQL Hour Range</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>