force-app/main/default/objects/IntegrationApiSettings__c/fields/InboundQueryApiAsyncStatusInterval__c.field-meta.xml
<CustomField>
    <fullName>InboundQueryApiAsyncStatusInterval__c</fullName>
    <description>The number of minutes in between each async soql status check. Should be between 5-20 minutes</description>
    <inlineHelpText>The number of minutes in between each async soql status check. Should be between 5-20 minutes</inlineHelpText>
    <label>Inbound Query Api Async Status Interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>