force-app/main/default/objects/IntegrationApiSettings__c/fields/InboundQueryApiIncludedProfiles__c.field-meta.xml
<CustomField>
    <fullName>InboundQueryApiIncludedProfiles__c</fullName>
    <description>List of profile ids to monitor for when processing query api events. Separate by a comma.</description>
    <inlineHelpText>List of profile ids to monitor for when processing query api events. Separate by a comma.</inlineHelpText>
    <label>Inbound Query Api Included Profiles</label>
    <type>TextArea</type>
</CustomField>